2010-02-09  Chang Shu  <Chang.Shu@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] Enable http/tests/appcache but skip the failed cases.
        https://bugs.webkit.org/show_bug.cgi?id=34713

        * platform/qt/Skipped:
2010-02-09  Chang Shu  <Chang.Shu@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] Enable appcache feature.
        https://bugs.webkit.org/show_bug.cgi?id=34713

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::WebPage::WebPage):
        * DumpRenderTree/qt/main.cpp:
        (main):

Canonical link: https://commits.webkit.org/45856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54543 268f45cc-cd09-0410-ab3c-d52691b4dbfc