WebKitTools/DumpRenderTree/qt/main.cpp
@@ -163,6 +163,7 @@ int main(int argc, char* argv[])
 
     QString dbDir = QDesktopServices::storageLocation(QDesktopServices::DataLocation) + QDir::separator() + "qtwebkitdrt";
     QWebSettings::setOfflineStoragePath(dbDir);
+    QWebSettings::setOfflineWebApplicationCachePath(dbDir);
     QWebDatabase::removeAllDatabases();
 
     if (args.contains(QLatin1String("-"))) {
